...
    "list": [
      {
        "defaultValue": "",
        "key": "region",
        "type": "radio",
        "value": "region",
        "title": "地区",
        "children": [
          {
            "title": "区域",
            "key": "region",
            "type": "radio",
            "defaultValue": "2",
...
              }
            ]
          }
        ]
      },
      {
        "title": "租金",
        "key": "price",
        "type": "checkbox",
        "defaultValue": "",
        "value": "",
        "children": [
          {
...
