...
  // final page = const HouseListPage(
  //   needAppBar: false,
  //   keyWord: "",
  // );

  /// 推荐的搜索条目
  var suggestList = ["汤臣一品", "上海交通大学"];

  /// 搜索提示条目
  List<Tips> inputTipsList = [];
  bool onChange = true;

  @override
...
